--- a/DragonBoating/app/src/main/res/values/strings.xml
+++ b/DragonBoating/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Dragon Boating</string>
+    <string name="edit_message">Enter a message</string>
+    <string name="button_send">Send</string>
 </resources>
