--- a/DragonBoating/app/src/main/res/values/strings.xml
+++ b/DragonBoating/app/src/main/res/values/strings.xml
@@ -9,4 +9,14 @@
     <string name="rate_3">Rest BPM</string>
     <string name="button_start">START</string>
     <string name="text_set">Sets: </string>
+    <string name="result_title">Results</string>
+    <string name="result_time">Total time in this part: </string>
+    <string name="result_bpm">Total strokes in this part: </string>
+    <string name="result_total_time">Total time: </string>
+    <string name="result_total_bpm">Total strokes: </string>
+    <string name="result_average_bpm">Total Average BPM: </string>
+    <string name="result_total">Total</string>
+    <string name="result_main">Main Part</string>
+    <string name="result_secondary">Secondary Part</string>
+    <string name="result_rest">Rest Part</string>
 </resources>
